Minor edit of the long description.

--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -18,9 +18,9 @@ OpenIDE-Module-Name=IDE Core
 OpenIDE-Module-Display-Category=Infrastructure
 OpenIDE-Module-Short-Description=The basic core framework of the IDE.
 OpenIDE-Module-Long-Description=\
-        This is not really a module, rather the central infrastructure \
+        This module provides the central infrastructure \
         that causes the IDE to exist as an application. \
-        As such, it cannot be disabled.
+        This module cannot be disabled.
 
 # TopManager properties
 CTL_Netbeanshome_property=netbeans.home is not set.\nPlease check your NetBeans startup script.
