--- a/xml.core/build.xml
+++ b/xml.core/build.xml
@@ -70,6 +70,7 @@ Microsystems, Inc. All Rights Reserved.
                 <pathelement location="${parserimpl}"/>
                 <pathelement location="${tax_lib_root}/src/"/>
                 <pathelement location="${api_root}/src/"/>
+                <pathelement location="${binroot}/core/release/lib/ext/xml-apis.jar"/>
             </classpath>
         </javac>
 
