Fix of bug #22809 : better warning message when substitute form base class is used for opened form.

--- a/form/src/org/netbeans/modules/form/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/Bundle.properties
@@ -196,12 +196,15 @@ MSG_ERR_MissingMainElement=Invalid format: main \"Form\" element not found in th
 FMT_ERR_UnsupportedVersion=Unsupported form file version: {0}.\nThe form cannot be opened.
 
 # formatting of warning message when a substitute form type is used
-# {0} = the substitute type
-# {1} = folder where ide.log is placed
-FMT_FormTypeFallsBack=The form type used for design falls back to {0}.\n\
-The class specified in the java source cannot be used.\n\
-See ide.log file for details about exceptions.\n\
-The ide.log file is located in {1} folder.
+# {0} = the type which failed
+# {1} = the substitute type
+# {2} = folder where ide.log is placed
+FMT_FormTypeFallsBack=Cannot create form based on the class specified (extended) in the java\n\
+source file. The problematic class is: {0}.\n\
+It was not possible to load the class or create an instance of it.\n\
+Form Editor will use {1} instead (for design only).\n\n\
+See the ide.log file for details about exceptions.\n\
+The ide.log file is located in the {2} folder.
 
 # formatting of message when the form cannot be based on given class
 # {0} = the invalid base class name
