#22934 annotations used instead of Line.markError().

--- a/xml.core/src/org/netbeans/modules/xml/core/resources/Bundle.properties
+++ b/xml.core/src/org/netbeans/modules/xml/core/resources/Bundle.properties
@@ -31,3 +31,8 @@ Actions/Help/org-netbeans-modules-xml-core-docs-mainpage.xml=XML Module Help
 # File Types
 Services/MIMEResolver/XMLSchema.xml=XML Schemas
 Services/MIMEResolver/xslt-mime-resolver.xml=Extensible Stylesheet Language (XSLT)
+
+## error-annotation.xml
+LBL_error_annotation=XML Syntax Error
+
+#--
