openide-util.jar now depends on openide-lookup.jar

--- a/openide/build.xml
+++ b/openide/build.xml
@@ -342,14 +342,12 @@ Microsystems, Inc. All Rights Reserved.
 	     manifest="openide-util-subst.mf"
 	     compress="false">
              <fileset dir="src" excludesfile="../nbbuild/standard-jar-excludes.txt" >
-                  <include name="org/openide/ErrorManager*class"/>
              	  <include name="org/openide/util/io/*"/>
              	  <include name="org/openide/util/enum/*"/>
              	  <include name="org/openide/util/datatransfer/*"/>
                   <include name="org/openide/util/actions/*"/>
-                  <include name="org/openide/util/lookup/*"/>
                   <include name="org/openide/xml/"/>
-                  
+
                   <!-- XXX review distribution of JPopupMenuPlus, JPopupMenuUtils, etc. -->
                   <include name="org/openide/awt/JPopupMenu*class" />
                   <include name="org/openide/awt/NbPopupMenuUI*class" />
@@ -366,6 +364,12 @@ Microsystems, Inc. All Rights Reserved.
              <!-- Includes of the org/openide/util package -->
              <fileset dir="src" excludesfile="../nbbuild/standard-jar-excludes.txt" >
              	  <include name="org/openide/util/*"/>
+                  
+                  <!-- Exclude classes already included in lib-lookup -->
+                  <exclude name="org/openide/util/lookup"/>
+                  <exclude name="org/openide/util/lookup/*"/>
+                  <exclude name="org/openide/util/*Lookup*"/>
+                  <exclude name="org/openide/util/WeakSet*"/>
                   
                   <!-- exlude localized resources, they are part of openide.jar -->
                   <exclude name="org/openide/util/*_*" />
