Fixed #24421 - Invalid separator at Source Editor's popup menu.

--- a/xml.text/src/org/netbeans/modules/xml/text/syntax/Bundle.properties
+++ b/xml.text/src/org/netbeans/modules/xml/text/syntax/Bundle.properties
@@ -48,3 +48,5 @@ NAME_coloring_dtd-keyword=DTD Keyword
 NAME_coloring_dtd-target=PI Target
 NAME_coloring_dtd-eol=DTD New Line (deprecated)
 
+## XMLSettingsInitializer
+NAME_WeakXMLActions=Enabled sensitive XML actions
