--- a/form/src/org/netbeans/modules/form/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/Bundle.properties
@@ -9,12 +9,6 @@
 # Code is Sun Microsystems, Inc. Portions Copyright 1997-2000 Sun
 # Microsystems, Inc. All Rights Reserved.
 
-# manifest localization
-OpenIDE-Module-Name=Form Editor
-OpenIDE-Module-Short-Description=Supports visual design of AWT and Swing applications.
-OpenIDE-Module-Long-Description=The Form Editor module enables you to visually design AWT and Swing applications.
-OpenIDE-Module-Display-Category=Java
-
 # display name of the Form Editor window
 CTL_FormEditorWindow=Form Editor
 
@@ -452,7 +446,7 @@ FMT_MSG_AddToOthers=Add {0} to Other Components.
 # form designer resizing
 # {0} = current designer width
 # {1} = current designer height
-FMT_HINT_DesignerResizing=[{0}, {1}] To set the designer size, drag or doubleclick the border.
+FMT_HINT_DesignerResizing=[{0}, {1}] To change the designer size, drag or doubleclick the border.
 CTL_SetDesignerSize_Title=Set Form Desiger Size
 CTL_SetDesignerSize_Label=New Size (width, height):
 
@@ -791,9 +785,6 @@ ACSD_CTL_GeneratePreInitializationCodeArea=N/A
 
 #Bean Installer
 MSG_InstalledArchives=Installed Archives
-
-#DefaultRADAction
-MSG_DefaultRADAction=DefaultRADAction
 
 CTL_CW_Parameters=Parameters
 FMT_MSG_InvalidJavaIdentifier={0} is not a Java identifier.
