Deploy the lookup-src.zip. I forgot to mention the target somewhere from where it would be called during regular build of standalone libraries.

--- a/openide/build.xml
+++ b/openide/build.xml
@@ -474,7 +474,7 @@ Microsystems, Inc. All Rights Reserved.
         </jar>
   </target>        
   
-  <target name="lib-lookup" depends="compile,13javac-workaround,vers-prep">
+  <target name="lib-lookup" depends="compile,13javac-workaround,vers-prep,lookup-src">
 	<mkdir dir="standalone"/>
         <copy file="openide-lookup.mf" tofile="openide-lookup-subst.mf" filtering="on"/>
         
