Localized name for Diff Types added. Also a few touchups to diff service names made, short descriptions added. This is a fix of issue #24667.

--- a/diff/src/org/netbeans/modules/diff/builtin/Bundle.properties
+++ b/diff/src/org/netbeans/modules/diff/builtin/Bundle.properties
@@ -9,7 +9,7 @@
 # Code is Sun Microsystems, Inc. Portions Copyright 1997-2002 Sun
 # Microsystems, Inc. All Rights Reserved.
 
-DefaultDiff.displayName=Built In Diff Service
+DefaultDiff.displayName=Built-in Diff Service
 
 MSG_NoDifference=No differences were found between ''{0}'' and ''{1}''.
 
