--- a/diff/src/org/netbeans/modules/diff/builtin/provider/Bundle.properties
+++ b/diff/src/org/netbeans/modules/diff/builtin/provider/Bundle.properties
@@ -9,5 +9,5 @@
 # Code is Sun Microsystems, Inc. Portions Copyright 1997-2002 Sun
 # Microsystems, Inc. All Rights Reserved.
 
-BuiltInDiffProvider.displayName=Built In Diff Engine
-BuiltInDiffProvider.shortDescription=
+BuiltInDiffProvider.displayName=Built-in Diff Engine
+BuiltInDiffProvider.shortDescription=Default built-in diff engine, that computes differences between two sources.
