--- a/diff/src/org/netbeans/modules/diff/builtin/visualizer/Bundle.properties
+++ b/diff/src/org/netbeans/modules/diff/builtin/visualizer/Bundle.properties
@@ -20,7 +20,7 @@ DiffComponent.prevButton.mnemonic=P
 MSG_NoDifference=No differences were found between ''{0}'' and ''{1}''.
 
 GraphicalDiffVisualizer.displayName=Graphical Diff Viewer
-GraphicalDiffVisualizer.shortDescription=
+GraphicalDiffVisualizer.shortDescription=Graphical color viewer of differences between two sources.
 
 # GraphicalDiffVisualizerBeanInfo
 PROP_colorAdded=Color of Added Text
@@ -37,4 +37,4 @@ PROP_contextNumLines=Number Of Context Lines
 HINT_contextNumLines=
 
 TextDiffVisualizer.displayName=Textual Diff Viewer
-TextDiffVisualizer.shortDescription=
+TextDiffVisualizer.shortDescription=Viewer of differences as a plain text.
