--- a/diff/src/org/netbeans/modules/diff/cmdline/Bundle.properties
+++ b/diff/src/org/netbeans/modules/diff/cmdline/Bundle.properties
@@ -9,8 +9,8 @@
 # Code is Sun Microsystems, Inc. Portions Copyright 1997-2000 Sun
 # Microsystems, Inc. All Rights Reserved.
 
-displayName=Command Line Diff
-shortDescription=
+displayName=Command-line Diff
+shortDescription=An external diff engine, that produce list of differences in a format compatible with Unix diff.
 runtimeError=The diff command ''{0}'' failed to execute in the system.
 
 PROP_diffCmd=The Diff Command
