Fix of bug #23265: specifying mnemonic using & character - workaround for NotifyDescriptor.InputLine.

--- a/form/src/org/netbeans/modules/form/palette/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/palette/Bundle.properties
@@ -35,7 +35,7 @@ ACSD_AddMode=If selected, Form Editor is in \"Add Mode\" - you may add the selec
 
 CTL_NewCategory=Palette Category
 CTL_NewCategoryTitle=New Palette Category
-CTL_NewCategoryName=New Category Name:
+CTL_NewCategoryName=&New Category Name:
 CTL_NewCategoryValue=Category
 
 ACS_PaletteTabbedPane=Component palette categories
@@ -74,7 +74,7 @@ FMT_ConfirmCategoryDelete=Are you sure you want to delete \"{0}\" palette catego
                           and all of its contents?
 CTL_ConfirmCategoryTitle=Confirm Palette Category Removal
 CTL_Rename=Rename
-CTL_NewName=New Name:
+CTL_NewName=&New Name:
 
 # context menu on palette
 CTL_OrderCategories=Change Categories Order
