Fix of bug #23879: specifying mnemonic using & character - workaround for NotifyDescriptor.InputLine.

--- a/form/src/org/netbeans/modules/form/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/Bundle.properties
@@ -448,7 +448,7 @@ FMT_MSG_AddToOthers=Add {0} to Other Components.
 # {1} = current designer height
 FMT_HINT_DesignerResizing=[{0}, {1}] To change the designer size, drag or doubleclick the border.
 CTL_SetDesignerSize_Title=Set Form Desiger Size
-CTL_SetDesignerSize_Label=New Size (width, height):
+CTL_SetDesignerSize_Label=&New Size (width, height):
 
 # Events
   MSG_CannotAttach=\
@@ -701,11 +701,11 @@ CTL_EE_REMOVE_Mnemonic=R
 CTL_EE_RENAME=Rename...
 CTL_EE_RENAME_Mnemonic=n
 CTL_EE_RENAME_CAPTION=Rename Handler
-CTL_EE_RENAME_LABEL=New name for handler:
+CTL_EE_RENAME_LABEL=&New name for handler:
 CTL_EE_NOT_IDENTIFIER=The handler name is not a valid Java identifier.
 CTL_EE_ALREADY_EXIST=Event handler of this name is already included.
 CTL_EE_ADD_CAPTION=Add Handler
-CTL_EE_ADD_LABEL=New Handler Name:
+CTL_EE_ADD_LABEL=&New Handler Name:
 CTL_EE_Handlers=Handlers
 CTL_EE_Handlers_Mnemonic=d
 ACSD_CTL_EE_Handlers=N/A
