--- a/o.n.core/src/org/netbeans/core/ui/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/ui/Bundle.properties
@@ -114,7 +114,7 @@ LBL_UseProxyServer=Use HTTP Proxy Server
 LBL_SDI=Multiple Smaller Windows Mode ("SDI")
 LBL_MDI=Full Screen Mode ("MDI")
 LBL_Server_Name=Proxy Server Name:
-LBL_Head=Set General NetBeans settings on this page.
+LBL_Head=Set general NetBeans settings on this page.
 LBL_Port=Port:
 LBL_WindowMode=Window Mode:
 LBL_WebProxy=Web Proxy:
