#24572: cosmetic changes in preparation for 3.4b2.

--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -614,7 +614,7 @@ ToDo:
         <include name="*.jar"/>
       </eager>
     </createmodulexml>
-    <echo file="${netbeans.dest}/build_info">NetBeans dev build
+    <echo file="${netbeans.dest}/build_info">NetBeans 3.4 beta build
 ------------------
 Number:   ${buildnumber}
 Date:     ${TODAY}
