--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -9,9 +9,9 @@
 # Code is Sun Microsystems, Inc. Portions Copyright 1997-2002 Sun
 # Microsystems, Inc. All Rights Reserved.
 
-# VERSIONING (TopLogging), MainWindow)
+# VERSIONING (TopLogging, MainWindow)
 # {0} - build number
-currentVersion=NetBeans IDE Development Version (Build {0})
+currentVersion=NetBeans IDE 3.4 Beta 2 (Build {0})
 
 # core manifest
 OpenIDE-Module-Name=IDE Core
