Adding short description (tooltip) to HTTP Server node. This description is now shown in the explorer's mini-status line.

--- a/httpserver/src/org/netbeans/modules/httpserver/Bundle.properties
+++ b/httpserver/src/org/netbeans/modules/httpserver/Bundle.properties
@@ -16,6 +16,7 @@ OpenIDE-Module-Short-Description=Provides infrastructure for testing applets, RM
 OpenIDE-Module-Long-Description=The HTTP Server module provides the infrastructure necessary for a variety of tasks, such as testing applets, testing RMI and JINI applications, and viewing Javadoc documentation in the external web browser.
 
 CTL_HTTP_settings=HTTP Server
+CTL_HTTP_sett_HINT=Embedded HTTP server (not the server for running web applications)
 CTL_Hosts=Hosts
 CTL_Local_host=Selected Hosts: 
 CTL_Any_host=Any Host
