Fixed dependency to make target all-translatedfile working standalone

--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -424,7 +424,7 @@ ToDo:
     <echo message="Building module tomcatint/bundledtomcat..."/>
     <ant dir="../tomcatint/bundledtomcat" target="netbeans"/>
   </target>
-  <target name="all-translatedfiles">
+  <target name="all-translatedfiles" depends="init">
     <echo message="Building module translatedfiles..."/>
     <ant dir="../translatedfiles" target="netbeans"/>
   </target>
