* No more ${release}. * Changed some debug messages.

--- a/xml.catalog/build.xml
+++ b/xml.catalog/build.xml
@@ -27,7 +27,6 @@ Microsystems, Inc. All Rights Reserved.
     <property name="dist.base" value="www.netbeans.org/download/nbms/40/xml"/>
     <property name="storepass" value="?"/>
     <property name="nbm_alias" value="nb_ide"/>
-    <property name="release" value="dev"/>
 
     <taskdef name="jhindexer" classname="org.netbeans.nbbuild.JHIndexer" classpath="${nbext_root}/nbantext.jar"/>
     <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="${nbext_root}/nbantext.jar"/>
@@ -112,11 +111,11 @@ Microsystems, Inc. All Rights Reserved.
     
     <target name="nbm" depends="netbeans">
         <delete dir="Info"/>
-        <makenbm file="../xml-catalog-${release}.nbm"
+        <makenbm file="../xml-catalog.nbm"
                  topdir="."
                  module="netbeans/modules/xml-catalog.jar"
                  homepage="http://xml.${homepage.base}/catalog/"
-                 distribution="http://${dist.base}/xml-catalog-${release}.nbm">
+                 distribution="http://${dist.base}/xml-catalog.nbm">
             <license file="${license.file}"/>
             <signature keystore="${keystore}" storepass="${storepass}" alias="${nbm_alias}"/>
         </makenbm>
@@ -129,7 +128,7 @@ Microsystems, Inc. All Rights Reserved.
             </fileset>
         </delete>
         <delete file="manifest-subst.mf"/>
-        <delete file="../xml-catalog-${release}.nbm"/>
+        <delete file="../xml-catalog.nbm"/>
         <delete dir="netbeans"/>
         <delete dir="Info"/>
 
