--- a/xml/build.xml
+++ b/xml/build.xml
@@ -23,8 +23,6 @@ Microsystems, Inc. All Rights Reserved.
     <taskdef  name="for-each" classname="org.netbeans.nbbuild.ForEach" classpath="${nbext_root}/nbantext.jar"/>
     <property name="submodules" value="api, tax, core, catalog, tools, text-edit, tree-edit, css"/>
 
-    <property name="release" value="dev"/>
-
     <property name="build.compiler.debug" value="on"/>
 
 
@@ -56,7 +54,7 @@ Microsystems, Inc. All Rights Reserved.
 
     <target name="clean">
         <delete dir="netbeans"/>
-        <delete file="xml-${release}-nbms.zip"/>
+        <delete file="xml-nbms.zip"/>
 
         <for-each locations="${submodules}"/>
     </target>
@@ -100,9 +98,9 @@ Microsystems, Inc. All Rights Reserved.
 
     <!-- Create zip archive from all nbm files. -->
     <target name="zip" depends="nbm">
-        <zip zipfile="xml-${release}-nbms.zip"
+        <zip zipfile="xml-nbms.zip"
              basedir="."
-             includes="*-${release}.nbm"
+             includes="*.nbm"
              excludesfile="${nbroot}/nbbuild/standard-jar-excludes.txt"
              compress="true"/>
     </target>
