--- a/api.xml/build.xml
+++ b/api.xml/build.xml
@@ -27,7 +27,7 @@ Microsystems, Inc. All Rights Reserved.
     <property name="dist.base" value="www.netbeans.org/download/nbms/40/xml"/>
     <property name="storepass" value="?"/>
     <property name="nbm_alias" value="nb_ide"/>
-    <property name="release" value="dev"/>
+
     <taskdef name="jhindexer" classname="org.netbeans.nbbuild.JHIndexer" classpath="${nbext_root}/nbantext.jar"/>
     <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="${nbext_root}/nbantext.jar"/>
     <taskdef name="genlist" classname="org.netbeans.nbbuild.MakeListOfNBM" classpath="${nbext_root}/nbantext.jar"/>
@@ -88,11 +88,11 @@ Microsystems, Inc. All Rights Reserved.
         
     <target name="nbm" depends="netbeans">
         <delete dir="Info"/>
-        <makenbm file="../xml-api-${release}.nbm"
+        <makenbm file="../xml-api.nbm"
                  topdir="."
                  module="netbeans/modules/autoload/xml-api.jar"
                  homepage="http://xml.${homepage.base}/api/"
-                 distribution="http://${dist.base}/xml-api-${release}.nbm">
+                 distribution="http://${dist.base}/xml-api.nbm">
             <license file="${license.file}"/>
             <signature keystore="${keystore}" storepass="${storepass}" alias="${nbm_alias}"/>
         </makenbm>
@@ -105,7 +105,7 @@ Microsystems, Inc. All Rights Reserved.
             </fileset>
         </delete>
         <delete file="manifest-subst.mf"/>
-        <delete file="../xml-api-${release}.nbm"/>
+        <delete file="../xml-api.nbm"/>
         <delete dir="netbeans"/>
         <delete dir="Info"/>
     </target>
