--- a/xml.tools/build.xml
+++ b/xml.tools/build.xml
@@ -31,7 +31,6 @@ Microsystems, Inc. All Rights Reserved.
     <property name="dist.base" value="www.netbeans.org/download/nbms/40/xml"/>
     <property name="storepass" value="?"/>
     <property name="nbm_alias" value="nb_ide"/>
-    <property name="release" value="dev"/>
 
     <taskdef name="jhindexer" classname="org.netbeans.nbbuild.JHIndexer" classpath="${nbext_root}/nbantext.jar"/>
     <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="${nbext_root}/nbantext.jar"/>
@@ -114,11 +113,11 @@ Microsystems, Inc. All Rights Reserved.
     
     <target name="nbm" depends="netbeans">
         <delete dir="Info"/>
-        <makenbm file="../xml-tools-${release}.nbm"
+        <makenbm file="../xml-tools.nbm"
                  topdir="."
                  module="netbeans/modules/xml-tools.jar"
                  homepage="http://xml.${homepage.base}/tools/"
-                 distribution="http://${dist.base}/xml-tools-${release}.nbm">
+                 distribution="http://${dist.base}/xml-tools.nbm">
             <license file="${license.file}"/>
             <signature keystore="${keystore}" storepass="${storepass}" alias="${nbm_alias}"/>
         </makenbm>
@@ -131,7 +130,7 @@ Microsystems, Inc. All Rights Reserved.
             </fileset>
         </delete>
         <delete file="manifest-subst.mf"/>
-        <delete file="../xml-tools-${release}.nbm"/>
+        <delete file="../xml-tools.nbm"/>
         <delete dir="netbeans"/>
         <delete dir="Info"/>
     </target>
