--- a/xml.tools/src/org/netbeans/modules/xml/tools/resources/Bundle.properties
+++ b/xml.tools/src/org/netbeans/modules/xml/tools/resources/Bundle.properties
@@ -13,7 +13,7 @@
 OpenIDE-Module-Name=XML Productivity Tools
 OpenIDE-Module-Display-Category=XML
 OpenIDE-Module-Short-Description=The module contains various actions, generators and tools.
-OpenIDE-Module-Long-Description=The module contains various actions, generators and tools. Especially action to generate simple DTD from XML document, or wizard which generate SAX handler implementation according to selected DTD document.
+OpenIDE-Module-Long-Description=The module contains various actions, generators and tools. Especially action to generate simple DTD from XML document, or wizard which generate SAX handler implementation according to selected DTD document. It also contains XSL Transformation action.
 
 ## mf-layer.xml
 Mount/java/org-netbeans-modules-xml-tools-resources-xml_apis.xml=Standard XML APIs (JAXP, DOM, SAX) Library
