--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -4,23 +4,375 @@ sanitystart.args.additional=
 tryme.args.additional=
 
 ; Only useful to override in conjunction with merge target during development: -->
-fixedmodules=core,openide,core/javahelp,core/compiler,core/execution,core/ui,core/windows,core/ide
+fixedmodules=core, \
+        openide, \
+        core/javahelp, \
+        core/compiler, \
+        core/execution, \
+        core/ui, \
+        core/windows, \
+        core/ide
 
-config.superslim=classfile,clazz,editor,html,image,java/api,java,openidex,projects,text,utilities
+config.superslim=classfile, \
+        clazz, \
+        editor, \
+        html, \
+        image, \
+        java/api, \
+        java, \
+        openidex, \
+        projects, \
+        text, \
+        utilities
 
-config.slim=autoupdate,beans,classfile,clazz,debuggercore,debuggerjpda,editor,form,html,httpserver,httpserver/servletapi,image,java/api,java,openidex,projects,text,utilities
+config.slim=autoupdate, \
+        beans, \
+        classfile, \
+        clazz, \
+        debuggercore, \
+        debuggerjpda, \
+        editor, \
+        form, \
+        html, \
+        httpserver, \
+        httpserver/servletapi, \
+        image, \
+        java/api, \
+        java, \
+        openidex, \
+        projects, \
+        text, \
+        utilities
 
 local.config.libs=libs/xalan,libs/jaxp
-local.config.xml=xml/api,xml/tax,xml/core,xml/catalog,xml/tools,xml/text-edit,xml/tree-edit,xml/css
 
-config.stable=ant,ant/docs,apisupport/lite,applet,autoupdate,beans,classfile,clazz,core/settings,debuggercore,debuggerjpda,diff,editor,extbrowser,form,html,httpserver,httpserver/servletapi,i18n,image,j2eeserver,jarpackager,java/api,java,javacvs,javadoc,jndi,openidex,projects,properties,rmi,schema2beans,scripting,text,tomcatint/tomcat40,tomcatint/bundledtomcat,ui/welcome,usersguide,utilities,vcscore,vcscvs/compat,vcsgeneric,web/servletapi23,web/core,web/jspparser,web/jspsyntax,${local.config.libs},${local.config.xml}
+local.config.xml=xml/api, \
+        xml/tax, \
+        xml/core, \
+        xml/catalog, \
+        xml/tools, \
+        xml/text-edit, \
+        xml/tree-edit, \
+        xml/css
 
-config.stable-with-apisupport=ant,ant/docs,apisupport,apisupport/lite,apisupport/ant,apisupport/apidocs,applet,autoupdate,beans,classfile,clazz,core/settings,debuggercore,debuggerjpda,diff,editor,extbrowser,form,html,httpserver,httpserver/servletapi,i18n,image,j2eeserver,jarpackager,java/api,java,javacvs,javadoc,jndi,openidex,projects,properties,rmi,schema2beans,scripting,text,tomcatint/tomcat40,tomcatint/bundledtomcat,ui/welcome,usersguide,utilities,vcscore,vcscvs/compat,vcsgeneric,web/servletapi23,web/core,web/jspparser,web/jspsyntax,${local.config.libs},${local.config.xml}
+config.stable=ant, \
+        ant/docs, \
+        apisupport/lite, \
+        applet, \
+        autoupdate, \
+        beans, \
+        classfile, \
+        clazz, \
+        core/settings, \
+        debuggercore, \
+        debuggerjpda, \
+        diff, \
+        editor, \
+        extbrowser, \
+        form, \
+        html, \
+        httpserver, \
+        httpserver/servletapi, \
+        i18n, \
+        image, \
+        j2eeserver, \
+        jarpackager, \
+        java/api, \
+        java, \
+        javacvs, \
+        javadoc, \
+        jndi, \
+        openidex, \
+        projects, \
+        properties, \
+        rmi, \
+        schema2beans, \
+        scripting, \
+        text, \
+        tomcatint/tomcat40, \
+        tomcatint/bundledtomcat, \
+        ui/welcome, \
+        usersguide, \
+        utilities, \
+        vcscore, \
+        vcscvs/compat, \
+        vcsgeneric, \
+        web/servletapi23, \
+        web/core, \
+        web/jspparser, \
+        web/jspsyntax, \
+        ${local.config.libs}, \
+        ${local.config.xml}
 
-config.bloated=ant,ant/docs,apisupport,apisupport/lite,apisupport/ant,apisupport/apidocs,applet,autoupdate,beans,classfile,classclosure,clazz,core/settings,cpp,cpplite,debuggercore,debuggerjpda,debuggertools,diff,editor,extbrowser,externaleditor,form,freestylebrowser,html,httpserver,httpserver/servletapi,i18n,image,innertesters,j2eeserver,jarpackager,java/api,java,javacvs,javadoc,logger,makefile,metrics,monitor,multicompile,objectbrowser,openidex,projects,properties,ui/welcome,remotefs,rmi,schema2beans,scripting,serialversion,sysprops,tasklist,text,tomcatint/tomcat32,tomcatint/tomcat40,tomcatint/bundledtomcat,usersguide,utilities,vcscore,vcscvs,vcscvs/compat,vcsgeneric,web/servletapi23,web/core,web/jspparser,web/jspsyntax,web/jspdebug,web/advanced,web/taglibed,${local.config.libs},${local.config.xml},openidex/looks
+config.stable-with-apisupport=ant, \
+        ant/docs, \
+        apisupport, \
+        apisupport/lite, \
+        apisupport/ant, \
+        apisupport/apidocs, \
+        applet, \
+        autoupdate, \
+        beans, \
+        classfile, \
+        clazz, \
+        core/settings, \
+        debuggercore, \
+        debuggerjpda, \
+        diff, \
+        editor, \
+        extbrowser, \
+        form, \
+        html, \
+        httpserver, \
+        httpserver/servletapi, \
+        i18n, \
+        image, \
+        j2eeserver, \
+        jarpackager, \
+        java/api, \
+        java, \
+        javacvs, \
+        javadoc, \
+        jndi, \
+        openidex, \
+        projects, \
+        properties, \
+        rmi, \
+        schema2beans, \
+        scripting, \
+        text, \
+        tomcatint/tomcat40, \
+        tomcatint/bundledtomcat, \
+        ui/welcome, \
+        usersguide, \
+        utilities, \
+        vcscore, \
+        vcscvs/compat, \
+        vcsgeneric, \
+        web/servletapi23, \
+        web/core, \
+        web/jspparser, \
+        web/jspsyntax, \
+        ${local.config.libs}, \
+        ${local.config.xml}
 
-config.bloated-plus-extrabins=ant,ant/docs,apisupport,apisupport/lite,apisupport/ant,apisupport/apidocs,applet,autoupdate,beans,classfile,classclosure,clazz,core/settings,cpp,cpplite,debuggercore,debuggerjpda,debuggertools,diff,editor,extbrowser,externaleditor,form,freestylebrowser,html,httpserver,httpserver/servletapi,i18n,icebrowser,image,innertesters,j2eeserver,jarpackager,java/api,java,javacvs,javadoc,jini,logger,makefile,metrics,monitor,multicompile,objectbrowser,openidex,projects,properties,remotefs,rmi,schema2beans,scripting,serialversion,sysprops,tasklist,text,tomcatint/tomcat32,tomcatint/tomcat40,tomcatint/bundledtomcat,ui/welcome,usersguide,utilities,vcscore,vcscvs,vcscvs/compat,vcsgeneric,web/servletapi23,web/core,web/jspparser,web/jspsyntax,web/jspdebug,web/advanced,web/taglibed,${local.config.libs},${local.config.xml}
+config.bloated=ant, \
+        ant/docs, \
+        apisupport, \
+        apisupport/lite, \
+        apisupport/ant, \
+        apisupport/apidocs, \
+        applet, \
+        autoupdate, \
+        beans, \
+        classfile, \
+        classclosure, \
+        clazz, \
+        core/settings, \
+        cpp, \
+        cpplite, \
+        debuggercore, \
+        debuggerjpda, \
+        debuggertools, \
+        diff, \
+        editor, \
+        extbrowser, \
+        externaleditor, \
+        form, \
+        freestylebrowser, \
+        html, \
+        httpserver, \
+        httpserver/servletapi, \
+        i18n, \
+        image, \
+        innertesters, \
+        j2eeserver, \
+        jarpackager, \
+        java/api, \
+        java, \
+        javacvs, \
+        javadoc, \
+        logger, \
+        makefile, \
+        metrics, \
+        monitor, \
+        multicompile, \
+        objectbrowser, \
+        openidex, \
+        projects, \
+        properties, \
+        ui/welcome, \
+        remotefs, \
+        rmi, \
+        schema2beans, \
+        scripting, \
+        serialversion, \
+        sysprops, \
+        tasklist, \
+        text, \
+        tomcatint/tomcat32, \
+        tomcatint/tomcat40, \
+        tomcatint/bundledtomcat, \
+        usersguide, \
+        utilities, \
+        vcscore, \
+        vcscvs, \
+        vcscvs/compat, \
+        vcsgeneric, \
+        web/servletapi23, \
+        web/core, \
+        web/jspparser, \
+        web/jspsyntax, \
+        web/jspdebug, \
+        web/advanced, \
+        web/taglibed, \
+        ${local.config.libs}, \
+        ${local.config.xml}, \
+        openidex/looks
+
+config.bloated-plus-extrabins=ant, \
+        ant/docs, \
+        apisupport, \
+        apisupport/lite, \
+        apisupport/ant, \
+        apisupport/apidocs, \
+        applet, \
+        autoupdate, \
+        beans, \
+        classfile, \
+        classclosure, \
+        clazz, \
+        core/settings, \
+        cpp, \
+        cpplite, \
+        debuggercore, \
+        debuggerjpda, \
+        debuggertools, \
+        diff, \
+        editor, \
+        extbrowser, \
+        externaleditor, \
+        form, \
+        freestylebrowser, \
+        html, \
+        httpserver, \
+        httpserver/servletapi, \
+        i18n, \
+        icebrowser, \
+        image, \
+        innertesters, \
+        j2eeserver, \
+        jarpackager, \
+        java/api, \
+        java, \
+        javacvs, \
+        javadoc, \
+        jini, \
+        logger, \
+        makefile, \
+        metrics, \
+        monitor, \
+        multicompile, \
+        objectbrowser, \
+        openidex, \
+        projects, \
+        properties, \
+        remotefs, \
+        rmi, \
+        schema2beans, \
+        scripting, \
+        serialversion, \
+        sysprops, \
+        tasklist, \
+        text, \
+        tomcatint/tomcat32, \
+        tomcatint/tomcat40, \
+        tomcatint/bundledtomcat, \
+        ui/welcome, \
+        usersguide, \
+        utilities, \
+        vcscore, \
+        vcscvs, \
+        vcscvs/compat, \
+        vcsgeneric, \
+        web/servletapi23, \
+        web/core, \
+        web/jspparser, \
+        web/jspsyntax, \
+        web/jspdebug, \
+        web/advanced, \
+        web/taglibed, \
+        ${local.config.libs}, \
+        ${local.config.xml}
 
 ; moduleconfig for nbms in Daily Alpha Update Centre
-; consider modules icebrowser, cpplite, cpp, vcscvs, vcscvs/compat, jini, debuggertools
-config.daily-alpha-nbms=ant,ant/docs,apisupport,apisupport/lite,apisupport/ant,apisupport/apidocs,applet,autoupdate,beans,classfile,classclosure,clazz,corba,core/settings,debuggercore,debuggerjpda,,diff,editor,extbrowser,externaleditor,form,freestylebrowser,html,httpserver,httpserver/servletapi,i18n,image,innertesters,j2eeserver,jarpackager,java/api,java,javacvs,javadoc,logger,makefile,metrics,monitor,multicompile,objectbrowser,openidex,projects,properties,remotefs,rmi,schema2beans,scripting,serialversion,sysprops,tasklist,text,tomcatint/tomcat32,tomcatint/tomcat40,tomcatint/bundledtomcat,translatedfiles,ui/welcome,usersguide,utilities,vcscore,vcsgeneric,web/servletapi23,web/core,web/jspparser,web/jspsyntax,web/jspdebug,web/advanced,webl,${local.config.libs},${local.config.xml}
+; consider modules icebrowser,cpplite,cpp,vcscvs,vcscvs/compat,jini,debuggertools
+config.daily-alpha-nbms=ant, \
+        ant/docs, \
+        apisupport, \
+        apisupport/lite, \
+        apisupport/ant, \
+        apisupport/apidocs, \
+        applet, \
+        autoupdate, \
+        beans, \
+        classfile, \
+        classclosure, \
+        clazz, \
+        corba, \
+        core/settings, \
+        debuggercore, \
+        debuggerjpda, \
+        diff, \
+        editor, \
+        extbrowser, \
+        externaleditor, \
+        form, \
+        freestylebrowser, \
+        html, \
+        httpserver, \
+        httpserver/servletapi, \
+        i18n, \
+        image, \
+        innertesters, \
+        j2eeserver, \
+        jarpackager, \
+        java/api, \
+        java, \
+        javacvs, \
+        javadoc, \
+        logger, \
+        makefile, \
+        metrics, \
+        monitor, \
+        multicompile, \
+        objectbrowser, \
+        openidex, \
+        projects, \
+        properties, \
+        remotefs, \
+        rmi, \
+        schema2beans, \
+        scripting, \
+        serialversion, \
+        sysprops, \
+        tasklist, \
+        text, \
+        tomcatint/tomcat32, \
+        tomcatint/tomcat40, \
+        tomcatint/bundledtomcat, \
+        translatedfiles, \
+        ui/welcome, \
+        usersguide, \
+        utilities, \
+        vcscore, \
+        vcsgeneric, \
+        web/servletapi23, \
+        web/core, \
+        web/jspparser, \
+        web/jspsyntax, \
+        web/jspdebug, \
+        web/advanced, \
+        webl, \
+        ${local.config.libs}, \
+        ${local.config.xml}
